--- a/examples/template/index.html
+++ b/examples/template/index.html
@@ -13,6 +13,8 @@
   
 
     <script src="../../music/harmony.js"></script>
+    <script src="../../music/generators.js"></script>
+    <script src="../../music/melody.js"></script>
     <script src="sketch.js"></script>
 </body>
 </html>
